# python_template

./: .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  run_tests.py
python_template/: __init__.py
tests/: test_misc.py
